# TradingXAU

./: .env.example  .gitignore  README.md  XAU_Trading_Assistant_PRD.docx  main.py  pyproject.toml
.claude/: settings.local.json
agents/: data_fetcher.py  debater.py  macro_agent.py  output_formatter.py  pattern_scanner.py  risk_manager.py  tech_confirm.py  tf_arbiter.py
core/: config.py  graph.py  state.py
docs/superpowers/plans/: 2026-03-30-phase1-task1.1-scaffold.md  2026-03-30-phase1-task1.2-state-config.md  2026-03-31-phase1-task1.3-data-fetcher.md  2026-03-31-phase1-task1.4-swing-detector.md  2026-04-01-phase1-task1.5-patterns-base-double-bottom.md
docs/superpowers/specs/: 2026-03-30-phase1-task1.1-scaffold-design.md  2026-03-30-phase1-task1.2-state-config-design.md  2026-03-31-phase1-task1.3-data-fetcher-design.md  2026-03-31-phase1-task1.4-swing-detector-design.md  2026-04-01-phase1-task1.5-patterns-base-double-bottom-design.md
journal/: journal.py  stats.py
patterns/: asc_broadening.py  ascending_tri.py  base.py  bearish_flag.py  bearish_pennant.py  bearish_sym_tri.py  bull_flag.py  bull_pennant.py  bull_sym_tri.py  desc_broadening.py  descending_tri.py  double_bottom.py  double_top.py  falling_wedge.py  head_shoulders.py  inv_head_shoulders.py  rising_wedge.py
prompts/: bear_researcher.txt  bull_researcher.txt  verdict_synth.txt
tests/: test_core_config.py  test_core_state.py  test_data_fetcher.py  test_patterns.py  test_risk_manager.py  test_swing_detector.py
tools/: fibo_calc.py  indicators.py  news_calendar.py  swing_detector.py
